--- a/.project
+++ b/.project
@@ -14,7 +14,7 @@
 				</dictionary>
 				<dictionary>
 					<key>composer</key>
-					<value>de.ovgu.featureide.preprocessor.munge</value>
+					<value>de.ovgu.featureide.core.composer.aspectj</value>
 				</dictionary>
 				<dictionary>
 					<key>equations</key>
